<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Home Radio</string>
	<string name="action_check_updates">Check Updates</string>
	<string name="action_help">Help</string>
	<string name="action_refresh">Refresh</string>
	<string name="search_hint">Search</string>
	<string name="action_location">Location</string>
	<string name="action_search">Search</string>
	<string name="action_settings">Settings....</string>
	<string name="activity_new_message">Searching for Location is....</string>
</resources>
